--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href"style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-        <li>Estudante</li>
-        <li>Escola</li>
+        <img src="./img/image.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="./img/image.png">
+        <ul class="cabecalho-lista-item">
+        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Escola</li>
         </ul>
     </header>
+    <section class="Escola">
+        <h2 class="escola-titulo">Sobre a Escola   </h2>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p>
+        <p class="escola-texto-dois">
+            A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!
+
+        </p>
+    </section>
 </body>
 </html>
