--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Escola</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="./img/image.png" alt="logo da alura start">
-        <img class="cabecalho-imagem" src="./img/image.png">
+        <img class="cabecalho-imagem" src="./img/image.png" alt="logo da alura start">
         <ul class="cabecalho-lista-item">
         <li class="cabecalho-lista-item">Estudante</li>
         <li class="cabecalho-lista-item">Escola</li>
@@ -20,8 +19,7 @@
         <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p>
         <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!
         </p>
-        <img src="./img/image copy.png" alt="Menino no computer">
-        <img class="escola-imagem" src="./img/image copy.png">
+        <img class="escola-imagem" src="./img/image copy.png" alt="Menino no computer">
         
     </section>
 </body>
