--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Escola</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body text-align: center;>
     <header>
         <img class="cabecalho-imagem" src="./img/image.png" alt="logo da alura start">
         <ul class="cabecalho-lista-item">
