--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Escola</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body text-align: center;>
+<body>
     <header>
         <img class="cabecalho-imagem" src="./img/image.png" alt="logo da alura start">
         <ul class="cabecalho-lista-item">
@@ -15,10 +15,12 @@
         </ul>
     </header>
     <section class="escola">
+        <div class="escola-conteudo">
         <h2 class="escola-titulo">Sobre a Escola   </h2>
         <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p>
         <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!
         </p>
+        </div>
         <img class="escola-imagem" src="./img/image copy.png" alt="Menino no computer">
         
     </section>
