--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
         <img class="escola-imagem" src="./img/image copy.png" alt="Menino no computer">
         
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">
+            Quem são nossos estudantes?
+        </h2>
+    </section>
 </body>
 </html>
