--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <h2 class="estudante-titulo">
             Quem são nossos estudantes?
         </h2>
+        <img src="./img/IMG_20240319_102625.jpg" alt="foto do melhor aluno leo">
+        <h3>Leo Thiago</h3>
     </section>
 </body>
 </html>
