--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img class="cabecalho-imagem" src="./img/image.png" alt="logo da alura start">
         <ul class="cabecalho-lista-item">
         <li class="cabecalho-lista-item">Estudante</li>
