--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         </h2>
         <img src="./img/IMG_20240319_102625.jpg" alt="foto do melhor aluno leo">
         <h3>Leo Thiago</h3>
+        <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
+        <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
+        <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
+
+        <img src="./img/IMG_20240326_094314.jpg" alt="foto do eduardo">
+        <h3>eduardo novak</h3>
+        <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
+        <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
+        <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
+
     </section>
 </body>
 </html>
