--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
         <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
         <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
+        <img class="estudante-icone" 
 
     </section>
 </body>
