--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
         <h2 class="estudante-titulo">
             Quem são nossos estudantes?
         </h2>
+        <div class="estudante-todos"><span> </span>
+        <div class="estudante-div">
         <img src="./img/IMG_20240319_102625.jpg" alt="foto do melhor aluno leo">
         <h3>Leo Thiago</h3>
-        <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
+        <a href="https://github.com/leo-kovalczuk">
+        <img class="estudante-icone" src="./img/image copy 2.png" alt="Github"></a>
         <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
         <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
+        </div>
 
         <img src="./img/IMG_20240326_094314.jpg" alt="foto do eduardo">
         <h3>eduardo novak</h3>
         <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
         <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
         <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
-        <img class="estudante-icone" 
+        <img class="estudante-icone" src="./img/image copy 5.png" alt="Linkedin">
+        </div>
+    </div>
+
 
     </section>
 </body>
