--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </h2>
         <div class="estudante-todos"><span> </span>
         <div class="estudante-div">
-        <img src="./img/IMG_20240319_102625.jpg" alt="foto do melhor aluno leo">
+        <img class="estudante-imagem"src="./img/IMG_20240319_102625.jpg" alt="foto do melhor aluno leo">
         <h3>Leo Thiago</h3>
         <a href="https://github.com/leo-kovalczuk">
         <img class="estudante-icone" src="./img/image copy 2.png" alt="Github"></a>
@@ -43,7 +43,7 @@
         <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
         </div>
 
-        <img src="./img/IMG_20240326_094314.jpg" alt="foto do eduardo">
+        <img class="estudante-imagem" src="./img/IMG_20240326_094314.jpg" alt="foto do eduardo">
         <h3>eduardo novak</h3>
         <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
         <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
