--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
         </div>
     </div>
-
-
     </section>
+    <footer> 
+        <img src="./img/image.png" alt="logo da alura start">
+        
+    </footer>
 </body>
 </html>
