--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </div>
     </div>
     </section>
-    <footer> 
+    <footer class="fundo"> 
         <img src="./img/image.png" alt="logo da alura start">
-        
+
     </footer>
 </body>
 </html>
