--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <img class="estudante-imagem" src="./img/IMG_20240326_094314.jpg" alt="foto do eduardo">
         <h3>eduardo novak</h3>
-        <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
-        <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
-        <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
+        <img class="estudante-icone2" src="./img/image copy 2.png" alt="Github">
+        <img class="estudante-icone2" src="./img/image copy 3.png" alt="Instagram">
+        <img class="estudante-icone2" src="./img/image copy 4.png" alt="Facebook">
 
         </div>
     </div>
