--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
         </div>
          
-        <img class="estudante-imagem"src="./img/IMG_20240326_094314" alt="foto do aluno eduardo">
+        <img class="estudante-imagem"src="./img/IMG_20240326_094314.jpg" alt="foto do aluno eduardo">
         <h3>Eduardo Novak</h3> 
         <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
         <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
