--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <img class="escola-imagem" src="./img/image copy.png" alt="Menino no computer">
         
     </section>
+    <footer class="fundo-um">
     <section class="estudante">
         <h2 class="estudante-titulo">
             Quem são nossos estudantes?
