--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
             <div class="estudante-div">
             <img class="estudante-imagem"src="./img/IMG_20240326_094314.jpg" alt="foto do aluno edu">
-            <h3>Eduardo Novak</h3> 
+            <h3>Eduardo</h3> 
             <img class="estudante-icone" src="./img/image copy 2.png" alt="Github">
             <img class="estudante-icone" src="./img/image copy 3.png" alt="Instagram">
             <img class="estudante-icone" src="./img/image copy 4.png" alt="Facebook">
